--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.1.0",
+    "@tensorflow/tfjs": "^2.4.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "fingerpose": "0.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-speech-kit": "^3.0.1",
     "react-speech-recognition": "^3.9.0",
-    "sass": "^1.49.9",
+    "react-webcam": "^5.2.0",
+    "sass": "^1.51.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.18"
   },
