--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fingerpose": "0.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-speech-kit": "^3.0.1",
