--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 GENERATE_SOURCEMAP=false
+REACT_APP_ACCESS_KEY_ID=AKIAY7WAF4CPSIBWEMQ6
+REACT_APP_SECRET_ACCESS_KEY=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
